--- a/index1.html
+++ b/index1.html
@@ -20,151 +20,112 @@
 </div>
 <br>
 
-<div class="text8">
-<h1>القصيدة الاولى</h1>
+<div class ="text4">
+<div id="cc"></div>
+<br>
+<img src ="ee.jpg" width="800px" height ="900px" alt="picture of a forg"/>
 </div>
 
-<h2>  هذه القصيدة من مؤلفات العلامةالقاضي محمد 
-عبدالرحمن عبد الجبار السماوي رحمه الله وتغشاه بواسع رحمته الفها حين عزم
-الى مكة المكرمة
-</h2>
-<div class="text8">
-<b>
+<h3>ومن بعض المخطوطات التي عثر عليها</h3>
+<div class ="text4">
+<h1>مخطوطة لكتاب الزبد في الفقه وسنذكر نبذه منها</h1>
+</div>
+
+<h2>بسم الله الرحمن الرحيم</h2>
+
+<div class ="text9">
+اول   مانستفتح    المقال *      بذكر     حمد    ربنا    تعالى
 <br>
-ياَلله يَالَمطْلُوب بِنَا ارحْمَ وَاشْفَقْ *** يَارَازِقَ اَلحِيتَانِ بَيْن اْمَواجَهْ
-<br>
-منْ فَيْضِ بَحْرك كُلُّ نفْسٍ تَرزْقَ*** وَاقْسَامَهَا بَارْزاقَهَا دَرَّاجَهْ
-<br>
-وماذا عليك وجوباً مطلق *** لكن فضائل شاملة عباجه
-<br>
-انت الذي ان جدت جودك مسبق*** وانت الذي تسرع قضات الحاجه
-<br>
-ارجوك تغفر لي فانت الاشفق ***ياخالقي من نطفة امشاجه
-<br>
-بحق نور الحبيب الاشفق ***غاره سريعة عاجلة فواجه
-<br>
-صلو على روح النبي الاصدق*** المصطفى من فاز في معراجه
-<br>
-سميره جبريل لخوفه رفق *** حتى على المرافق تاجه
-<br>
-ابن السماوي بالمعاني دفق ***  فاسمع ترى نتايج الخراجة
-<br>
-اعداد اسمى بالمجمل وافق ** ضعف الماء بواحة اخراجه
-<br>
-ياصاح قم شد الجواد الاسبق *** امهر محجل شانعات اهواجه
-<br>
-اعيان لها جمر القرض تتفشق *** تخرج شرار النار بن ادعاجه
-<br>
-اذان له راس السنان الاذلق *** ضرب الحوافر بالصفا رحاجه
-<br>
-ربرب محرب في صهيله يزعق*** اذا فلت اتشابحت اوداجه
-<br>
-من حضرة الطود العضيم الاسبق*** الدامغ العالي رياحه فواجه
-<br>
-على الرواس بالحجا الاطوق *** انهار من تحت الحجا نباحه
-<br>
-يزرع كما حب الحصيد الاذوق***ومزان عليه من السماء فجاجه
-<br>
-شامخ على صهبان عريض الخندق *** مرعا القمارى في سفوح افواجه
-<br>
-زاهي البكرا حضر وعرفه اعبق ***طيب الشجر صعتر وما نحتاجه
-<br>
-اذا صعد مكروب ومن اضيق***اعلا جبلنا للنفس يحتاجه
-<br>
-ٌفتح سلاه وباب كربه يغلق *** تحيا الخواطر من هوى افواجه
-<br>
-وقت الشفق والنور فيه اشرق *** هم يصعد واهل النفس معراجه
-<br>
-سفح الجبل ترى القمارى تزعق *** فتيانها  فتيانها عباجه
-<br>
-ترى النشايد والحمايم  تنعق *** مجلس اوادم مابها مزباجه
-<br>
-هم الحور غرر جباههم تعرق *** كان راح الخمر  في خلجاجه
-<br>
-نجوى نشاوى والمعا ني  تلحق *** كم عاشقا تزعزعت اخلاجه
-<br>
-من الحدق يسكب دموعا تحرق *** يخرج سماع ا بيا تها زعاجه
-<br>
-كم قد بسطنا في الجبل نتحقق *** كل الجهات  بيامها البلاجه
-<br>
-بطالع العلوم بملحه بحرق *** ثم الخميس والفتح في منهاجه
-<br>
-كل الجبال لها رؤس ترمق *** والدامغ الدامغ راس الحاجه
-<br>
-هيهات كم من صبي يعشق *** حب المداكي فيوسفوح افواجه
-<br>
-من ذا الوطن حثحث ركاب الابلق ***  قبيل تطلع شمسها الوهاجه
-<br>
-وامسي بالعدين لا تتعوق *** وانزل تهامه حرها وهاجه
-<br>
-وادخل زبيد على المشايخ واشعق *** منهم بدعوه ثم سرد لاجه
+والحمد لله على ما انعما * حمداً به يجلو عن القلب العمى 
 <br> 
-بيت الفقيه نحو الحديدة  نطرق *** نبدي على بحورها العجاجه
+ثم الصلاة بعد والسلام * على نبي دينه الاسلام
+<br> 
+محمد خاتم رسل ربه * واله من بعده وصحبه
+<br> 
+ونسأل الله لنا الاعانة * فيما توخينا من الابانه
+<br> 
+عن مذهب الامام زيد الفرضي * اذا كان ذاك من اهم الغرض
+<br> 
+علماً بان العلم خير ما سعى * فيه واولى ماله العبد دعى
+<br> 
+وان هذا العلم مخصوص بما * قد شاع فيه عند كل العلماء
+<br> 
+بانه اول علم يفقد * بالارض حتى لايكاد يوجد
+<br> 
+وان زيداً خص لامحاله * بما حباه صاحب الرساله
 <br>
-سلم وسلم ربنا لا نغرق *** نركب على الواحها المواجه
+من قوله في فضله منبهاً * افرضكم زيد وناهيك بها
 <br>
-ياحافض السفن ببحر اغمق *** احفض غريبا صار بين امواجه
+فكان اولى بالتباع التابعي *لاسيما وقد نحاه الشافعي
 <br>
-من تحتي الماء والسماء من فوق *** ماعاد الا نجومها الوهاجه
-<br>
-البر غاب والماء علينا اغلق *** ولا نرى جبل ولا شلجاجه
-<br>
-الادفور امواجها تدفق *** حالة علينا اهوالها الهجاجه
-<br>
-اشمر بنا لف الشراع الابرق *** طارت بنا فوق العجل دراجه
-<br>
-في نصف شهر قط مانتعوق *** نخرج على جده مع الخراجه
-<br>
-شعثا وغبرا بالتلابي نزعق *** ومحرمين في زمرة الحجاجه
-<br>
-وام القرى نكسب خل احذق *** يدلنا على قضاة الحاجه
-<br>
-نفوز بمن  في حبها نتعشق *** اشكو جفاها هجر ها فلاجه
-<br>
-دعجا نعجا بلجا صفاها اشرق *** كحال ليلا سال غناجه
-<br>
-تلبس قراطق الحرير الازرق *** منسوج ذهب مرصوع في انشاجه
-<br>
-فضه ورق والتبر فيها ملفق *** والخز والديباج   في ديباجه
-<br>
-مشطوب كتوب مكتوب قول الاصدق *** حروف تسرج في الحرم سراجه
-<br>
-ومضحك المبسم بروق الابرق *** والريق عسل والسحر بين ادعاجه
-<br>
-وريحها المسك السحيق الاعبق *** والعطر شايً عرفها نعاجه
-<br>
-ثم الشمطري والعبيٌر الافوق *** والند يفتح لوعة الملهاجه
-<br>
-افدي قوامها البديع الارشق *** وحيد رور اعيانها المواجه
-<br>
-مع الدراي والجمال الاغدق *** والسرفي احواضها الغناجه
-<br>
-والله لادخل جوفها واتحدق *** واشرب زلال اعيانها النباجه
-<br>
-ومن مراشفها ارتشف واتعلق *** بذيالها وامرج مع المراجه
-<br>
-وامضي مدينة الحبيب الاشفق *** نزور من في الاخره نحتاجه
-<br>
-قبر النبي ومن بقوله اصدق *** واله وصحبه وازواجه
-<br>
-حلفت لاقصد نحوهم واتعلق *** بكل واحد في محل ابراجه
-<br>
-بحقهم ياذا العلا لا تفرق *** بيني وبينهم في حاجه
-<br>
-واحشرنا الجميع في زمرتهم نترفق *** يوم اللقا فيهم من الهجاجه
-<br>
-وبعدها ارض اليمن نتشوق *** حب الوطن اشواقنا زعاجه
-<br>
-والختم صلوا ما البلابل تزعق *** او ما القمر يدور في ابراجه
-<br>
-على النبي والال كلهم دقدق *** جيش العدا يرجون قضا الحاجه
+فهاك فيه القول عن ايجازي * مبرا عن وصمة الالغاز
 <br>
 </div>
-</b>
-<h2>
-<marquee direction ="right">
-الحقوق محفوضة لدى الناشر لايحق لاي شخص اقتباس جزء منها  الا اذا ذكر المصدر
-</marquee>
+
+<h2>باب اسباب الميراث</h2>
+
+<div class ="text9">
+ اسباب ميراث الوراثه ثلاثه* كلاً يفيد ربه الوراثة
+<br>
+وهي ولا ونكاح ونسب * مابعدهن للموارث سبب
+<br>
+وقد يقال بعدهن رابع * ميراث بيت المسلمين تابع
+<br>
+</div>
+
+<h2>باب موانع الارث</h2>
+
+<div class="text9">
+ويمنع الشخص من الميراث * واحدة من علا ثلاثة  
+<br>
+رقُّ وقتل واختلافُ دينِ * فافهم فليس الشك كاليقينِ
+<br>
+</div>
+
+<h2>باب الانيه</h2>
+
+<div class="text9">
+يباح منها طاهر من خشب * وغيره لافضة وذهب 
+<br>
+فيحرم استعماله كم ود * لامرأة وجاز من زبرجد
+<br>
+ويحرم الضبة من هذين * بكبر عرفاً مع التزيين 
+<br>
+قلت كذاك صحح الجمهور * ان الضباب مطلقاً محضور 
+<br>
+ان فقدت حلت وفردا تكره * والحاجة مالم تجاوز كسره
+<br>
+ويستحب في الاواني التغطية * ولو بعود حط فوق الانية
+<br>
+ويتحر لإشتباه طاهر * بنجس ولولا عمي قادر
+<br>
+كا الكم اولبول وميته وما * وردٍ وخمرٍ دراً من حرما
+<br>
+</div>
+
+<h2>باب السواك</h2>
+
+<div class="text9">
+يسن لابعد زوال الصايم * واكد ولا لانتباه النايم
+<br>
+ولتغير فم وللصلاة * ويسن باليمنى الاراك أولاه
+<br>
+ويستحب الاكتحال وتراً * وغباً ادهن وقلم ظفراً
+<br>
+وانتف الابط ويقص الشارب * والعانة احلق والختان واجب
+<br>
+لبالغ ساتر كمرة قطع * والا سم من انثى ويكره القزع 
+<br>
+تنزهاً والاخذ من جوانب * عنفقة ولحية وشارب
+<br>
+وحلق شعر امرأة ورد * طيب وريحان على من يهدي
+<br>
+وحرموا خضاب شعر سواد * لرجلٍ وامرأةٍ لا للجهاد
+<br>
+</div>
+
+<h2><marquee direction ="right">وسيتم ان شاء الله تعالى كتابة الباقي قام بجمع المخطوطات وكتابتها 
+MNYR ALSAMAWY للتواصل :<img src ="ff.png" width ="50px" height ="50px"></img>770597882</marquee>
 </h2>
 
 
