--- a/index.html
+++ b/index.html
@@ -320,7 +320,21 @@
 </b>
 </div>
 
+<h3>للتواصل معنا</h3>
+<div class="text12">
+<form name ="html form" method ="post" action ="server.php">
+<table id ="contact_form" dir="rtl">
+<tr><td><input type="text" name="first_name" placeholder="الاسم*" max length="50" size="30" required></td></tr>
+<tr><td><input type="text" name="last_name" placeholder="اللقب*" max length="50" size="30" required></td></tr>
+<tr><td><input type="email" name="email " placeholder="الايميل*" max length="80" size="30" required></td></tr>
+<tr><td><input type="text" name="telephone" placeholder="رقم الهاتف*" max length="30" size="30" required></td></tr>
+<tr><td><textarea name="comments" placeholder ="اكتب تعليقك هنا" max length="1000" cols="25" rows="6" required ></textarea></td></tr>
 
+
+<tr><td><input type="submit" value="ارسال"></td></tr>
+</table>
+</form>
+</div>
 
 <h3>زوار الموقع<h3>
 <div class="text10">
