--- a/index.html
+++ b/index.html
@@ -27,17 +27,18 @@
 
 <!-- النص -->
 <div class ="imgs">
-<un>
+<div class ="mmm">
 <ln><br><img src ="aa.jpg " width="290px " height="300px " >
 <b>العلامة القاضي محمد عبد الرحمن السماوي من اهالي قرية عدن الاشلوح عالم وافقيه في امور الدين علم القران الكريم في عدة مناطق وقد كان امام وخطيب جامع عدن الاشلوح وسنذكر نبذة مختصرة من حياته</b>
-</ln>
-<ln><br><img src ="bb.jpg " width="290px " height="300px " >
+</div>
+<div class="nnn">
+<br><img src ="bb.png " width="290px " height="300px " >
 <b>العلامة القاضي محمد عبد الرحمن السماوي من اهالي قرية عدن الاشلوح عالم وافقيه في امور الدين علم القران الكريم في عدة مناطق وقد كان امام وخطيب جامع عدن الاشلوح وسنذكر نبذة مختصرة من حياته</b>
-</ln>
-<ln><br><img src ="cc.jpg " width="290px " height="300px " >
+</div>
+<div class ="bbb">
+<br><img src ="cc.jpg " width="290px " height="300px " >
 <b>العلامة القاضي محمد عبد الرحمن السماوي من اهالي قرية عدن الاشلوح عالم وافقيه في امور الدين علم القران الكريم في عدة مناطق وقد كان امام وخطيب جامع عدن الاشلوح وسنذكر نبذة مختصرة من حياته</b>
-</ln>
-</un>
+</div>
 </div>
  
 <div class ="text1">
@@ -58,7 +59,7 @@
 <div class ="text3">
 <br>
 <div id="bb"></div>
-<img src ="bb.jpg" width="800px" height ="900px" alt="picture of a forg"/>
+<img src ="bb.png" width="800px" height ="900px" alt="picture of a forg"/>
 </div>
 <h3>مناقبة </h3>
 <div class ="text3">
@@ -79,138 +80,276 @@
 الى مكة المكرمة
 </h2>
 <div class="text8">
+<div class="textt">
 <b>
 <br>
-ياَلله يَالَمطْلُوب بِنَا ارحْمَ وَاشْفَقْ *** يَارَازِقَ اَلحِيتَانِ بَيْن اْمَواجَهْ
+ياَلله يَالَمطْلُوب بِنَا ارحْمَ وَاشْفَقْ  
 <br>
-منْ فَيْضِ بَحْرك كُلُّ نفْسٍ تَرزْقَ*** وَاقْسَامَهَا بَارْزاقَهَا دَرَّاجَهْ
+منْ فَيْضِ بَحْرك كُلُّ نفْسٍ تَرزْقَ 
 <br>
-وماذا عليك وجوباً مطلق *** لكن فضائل شاملة عباجه
+وماذا عليك وجوباً مطلق 
 <br>
-انت الذي ان جدت جودك مسبق*** وانت الذي تسرع قضات الحاجه
+انت الذي ان جدت جودك مسبق 
 <br>
-ارجوك تغفر لي فانت الاشفق ***ياخالقي من نطفة امشاجه
+ارجوك تغفر لي فانت الاشفق  
 <br>
-بحق نور الحبيب الاشفق ***غاره سريعة عاجلة فواجه
+بحق نور الحبيب الاشفق 
 <br>
-صلو على روح النبي الاصدق*** المصطفى من فاز في معراجه
+صلو على روح النبي الاصدق 
 <br>
-سميره جبريل لخوفه رفق *** حتى على المرافق تاجه
+سميره جبريل لخوفه رفق 
 <br>
-ابن السماوي بالمعاني دفق ***  فاسمع ترى نتايج الخراجة
+ابن السماوي بالمعاني دفق 
 <br>
-اعداد اسمى بالمجمل وافق ** ضعف الماء بواحة اخراجه
+اعداد اسمى بالمجمل وافق 
 <br>
-ياصاح قم شد الجواد الاسبق *** امهر محجل شانعات اهواجه
+ياصاح قم شد الجواد الاسبق  
 <br>
-اعيان لها جمر القرض تتفشق *** تخرج شرار النار بن ادعاجه
+اعيان لها جمر القرض تتفشق  
 <br>
-اذان له راس السنان الاذلق *** ضرب الحوافر بالصفا رحاجه
+اذان له راس السنان الاذلق  
 <br>
-ربرب محرب في صهيله يزعق*** اذا فلت اتشابحت اوداجه
+ربرب محرب في صهيله يزعق 
 <br>
-من حضرة الطود العضيم الاسبق*** الدامغ العالي رياحه فواجه
+من حضرة الطود العضيم الاسبق 
 <br>
-على الرواس بالحجا الاطوق *** انهار من تحت الحجا نباحه
+على الرواس بالحجا الاطوق  
 <br>
-يزرع كما حب الحصيد الاذوق***ومزان عليه من السماء فجاجه
+يزرع كما حب الحصيد الاذوق 
 <br>
-شامخ على صهبان عريض الخندق *** مرعا القمارى في سفوح افواجه
+شامخ على صهبان عريض الخندق  
 <br>
-زاهي البكرا حضر وعرفه اعبق ***طيب الشجر صعتر وما نحتاجه
+زاهي البكرا حضر وعرفه اعبق  
 <br>
-اذا صعد مكروب ومن اضيق***اعلا جبلنا للنفس يحتاجه
+اذا صعد مكروب ومن اضيق
 <br>
-ٌفتح سلاه وباب كربه يغلق *** تحيا الخواطر من هوى افواجه
+ٌفتح سلاه وباب كربه يغلق  
 <br>
-وقت الشفق والنور فيه اشرق *** هم يصعد واهل النفس معراجه
+وقت الشفق والنور فيه اشرق  
 <br>
-سفح الجبل ترى القمارى تزعق *** فتيانها  فتيانها عباجه
+سفح الجبل ترى القمارى تزعق 
 <br>
-ترى النشايد والحمايم  تنعق *** مجلس اوادم مابها مزباجه
+ترى النشايد والحمايم  تنعق  
 <br>
-هم الحور غرر جباههم تعرق *** كان راح الخمر  في خلجاجه
+هم الحور غرر جباههم تعرق  
 <br>
-نجوى نشاوى والمعا ني  تلحق *** كم عاشقا تزعزعت اخلاجه
+نجوى نشاوى والمعا ني  تلحق  
 <br>
-من الحدق يسكب دموعا تحرق *** يخرج سماع ا بيا تها زعاجه
+من الحدق يسكب دموعا تحرق  
 <br>
-كم قد بسطنا في الجبل نتحقق *** كل الجهات  بيامها البلاجه
+كم قد بسطنا في الجبل نتحقق  
 <br>
-بطالع العلوم بملحه بحرق *** ثم الخميس والفتح في منهاجه
+بطالع العلوم بملحه بحرق  
 <br>
-كل الجبال لها رؤس ترمق *** والدامغ الدامغ راس الحاجه
+كل الجبال لها رؤس ترمق 
 <br>
-هيهات كم من صبي يعشق *** حب المداكي فيوسفوح افواجه
+هيهات كم من صبي يعشق  
 <br>
-من ذا الوطن حثحث ركاب الابلق ***  قبيل تطلع شمسها الوهاجه
+من ذا الوطن حثحث ركاب الابلق  
 <br>
-وامسي بالعدين لا تتعوق *** وانزل تهامه حرها وهاجه
+وامسي بالعدين لا تتعوق 
 <br>
-وادخل زبيد على المشايخ واشعق *** منهم بدعوه ثم سرد لاجه
+وادخل زبيد على المشايخ واشعق  
 <br> 
-بيت الفقيه نحو الحديدة  نطرق *** نبدي على بحورها العجاجه
+بيت الفقيه نحو الحديدة  نطرق  
 <br>
-سلم وسلم ربنا لا نغرق *** نركب على الواحها المواجه
+سلم وسلم ربنا لا نغرق 
 <br>
-ياحافض السفن ببحر اغمق *** احفض غريبا صار بين امواجه
+ياحافض السفن ببحر اغمق  
 <br>
-من تحتي الماء والسماء من فوق *** ماعاد الا نجومها الوهاجه
+من تحتي الماء والسماء من فوق  
 <br>
-البر غاب والماء علينا اغلق *** ولا نرى جبل ولا شلجاجه
+البر غاب والماء علينا اغلق 
 <br>
-الادفور امواجها تدفق *** حالة علينا اهوالها الهجاجه
+الادفور امواجها تدفق 
 <br>
-اشمر بنا لف الشراع الابرق *** طارت بنا فوق العجل دراجه
+اشمر بنا لف الشراع الابرق  
 <br>
-في نصف شهر قط مانتعوق *** نخرج على جده مع الخراجه
+في نصف شهر قط مانتعوق  
 <br>
-شعثا وغبرا بالتلابي نزعق *** ومحرمين في زمرة الحجاجه
+شعثا وغبرا بالتلابي نزعق  
 <br>
-وام القرى نكسب خل احذق *** يدلنا على قضاة الحاجه
+وام القرى نكسب خل احذق 
 <br>
-نفوز بمن  في حبها نتعشق *** اشكو جفاها هجر ها فلاجه
+نفوز بمن  في حبها نتعشق 
 <br>
-دعجا نعجا بلجا صفاها اشرق *** كحال ليلا سال غناجه
+دعجا نعجا بلجا صفاها اشرق 
 <br>
-تلبس قراطق الحرير الازرق *** منسوج ذهب مرصوع في انشاجه
+تلبس قراطق الحرير الازرق  
 <br>
-فضه ورق والتبر فيها ملفق *** والخز والديباج   في ديباجه
+فضه ورق والتبر فيها ملفق  
 <br>
-مشطوب كتوب مكتوب قول الاصدق *** حروف تسرج في الحرم سراجه
+مشطوب كتوب مكتوب قول الاصدق  
 <br>
-ومضحك المبسم بروق الابرق *** والريق عسل والسحر بين ادعاجه
+ومضحك المبسم بروق الابرق  
 <br>
-وريحها المسك السحيق الاعبق *** والعطر شايً عرفها نعاجه
+وريحها المسك السحيق الاعبق  
 <br>
-ثم الشمطري والعبيٌر الافوق *** والند يفتح لوعة الملهاجه
+ثم الشمطري والعبيٌر الافوق 
 <br>
-افدي قوامها البديع الارشق *** وحيد رور اعيانها المواجه
+افدي قوامها البديع الارشق 
 <br>
-مع الدراي والجمال الاغدق *** والسرفي احواضها الغناجه
+مع الدراي والجمال الاغدق 
 <br>
-والله لادخل جوفها واتحدق *** واشرب زلال اعيانها النباجه
+والله لادخل جوفها واتحدق  
 <br>
-ومن مراشفها ارتشف واتعلق *** بذيالها وامرج مع المراجه
+ومن مراشفها ارتشف واتعلق 
 <br>
-وامضي مدينة الحبيب الاشفق *** نزور من في الاخره نحتاجه
+وامضي مدينة الحبيب الاشفق  
 <br>
-قبر النبي ومن بقوله اصدق *** واله وصحبه وازواجه
+قبر النبي ومن بقوله اصدق 
 <br>
-حلفت لاقصد نحوهم واتعلق *** بكل واحد في محل ابراجه
+حلفت لاقصد نحوهم واتعلق  
 <br>
-بحقهم ياذا العلا لا تفرق *** بيني وبينهم في حاجه
+بحقهم ياذا العلا لا تفرق 
 <br>
-واحشرنا الجميع في زمرتهم نترفق *** يوم اللقا فيهم من الهجاجه
+واحشرنا الجميع في زمرتهم نترفق  
 <br>
-وبعدها ارض اليمن نتشوق *** حب الوطن اشواقنا زعاجه
+وبعدها ارض اليمن نتشوق 
 <br>
-والختم صلوا ما البلابل تزعق *** او ما القمر يدور في ابراجه
+والختم صلوا ما البلابل تزعق  
 <br>
-على النبي والال كلهم دقدق *** جيش العدا يرجون قضا الحاجه
+على النبي والال كلهم دقدق  
 <br>
 </div>
-</b>
+
+<div class="texttt">
+<b>
+<br>
+ يَارَازِقَ اَلحِيتَانِ بَيْن اْمَواجَهْ
+<br>
+ وَاقْسَامَهَا بَارْزاقَهَا دَرَّاجَهْ
+<br>
+ لكن فضائل شاملة عباجه
+<br>
+ وانت الذي تسرع قضات الحاجه
+<br>
+ياخالقي من نطفة امشاجه
+<br>
+غاره سريعة عاجلة فواجه
+<br>
+ المصطفى من فاز في معراجه
+<br>
+ حتى على المرافق تاجه
+<br>
+ فاسمع ترى نتايج الخراجة
+<br>
+ ضعف الماء بواحة اخراجه
+<br>
+ امهر محجل شانعات اهواجه
+<br>
+ تخرج شرار النار بن ادعاجه
+<br>
+ ضرب الحوافر بالصفا رحاجه
+<br>
+ اذا فلت اتشابحت اوداجه
+<br>
+ الدامغ العالي رياحه فواجه
+<br>
+ انهار من تحت الحجا نباحه
+<br>
+ومزان عليه من السماء فجاجه
+<br>
+ مرعا القمارى في سفوح افواجه
+<br>
+طيب الشجر صعتر وما نحتاجه
+<br>
+اعلا جبلنا للنفس يحتاجه
+<br>
+ تحيا الخواطر من هوى افواجه
+<br>
+ هم يصعد واهل النفس معراجه
+<br>
+ فتيانها  فتيانها عباجه
+<br>
+ مجلس اوادم مابها مزباجه
+<br>
+ كان راح الخمر  في خلجاجه
+<br>
+ كم عاشقا تزعزعت اخلاجه
+<br>
+ يخرج سماع ا بيا تها زعاجه
+<br>
+ كل الجهات  بيامها البلاجه
+<br>
+ ثم الخميس والفتح في منهاجه
+<br>
+ والدامغ الدامغ راس الحاجه
+<br>
+ حب المداكي فيوسفوح افواجه
+<br>
+  قبيل تطلع شمسها الوهاجه
+<br>
+ وانزل تهامه حرها وهاجه
+<br>
+ منهم بدعوه ثم سرد لاجه
+<br> 
+ نبدي على بحورها العجاجه
+<br>
+ نركب على الواحها المواجه
+<br>
+ احفض غريبا صار بين امواجه
+<br>
+ ماعاد الا نجومها الوهاجه
+<br>
+ ولا نرى جبل ولا شلجاجه
+<br>
+ حالة علينا اهوالها الهجاجه
+<br>
+ طارت بنا فوق العجل دراجه
+<br>
+ نخرج على جده مع الخراجه
+<br>
+ ومحرمين في زمرة الحجاجه
+<br>
+ يدلنا على قضاة الحاجه
+<br>
+ اشكو جفاها هجر ها فلاجه
+<br>
+ كحال ليلا سال غناجه
+<br>
+ منسوج ذهب مرصوع في انشاجه
+<br>
+ والخز والديباج   في ديباجه
+<br>
+ حروف تسرج في الحرم سراجه
+<br>
+ والريق عسل والسحر بين ادعاجه
+<br>
+ والعطر شايً عرفها نعاجه
+<br>
+ والند يفتح لوعة الملهاجه
+<br>
+ وحيد رور اعيانها المواجه
+<br>
+ والسرفي احواضها الغناجه
+<br>
+ واشرب زلال اعيانها النباجه
+<br>
+ بذيالها وامرج مع المراجه
+<br>
+ نزور من في الاخره نحتاجه
+<br>
+ واله وصحبه وازواجه
+<br>
+ بكل واحد في محل ابراجه
+<br>
+ بيني وبينهم في حاجه
+<br>
+ يوم اللقا فيهم من الهجاجه
+<br>
+ حب الوطن اشواقنا زعاجه
+<br>
+ او ما القمر يدور في ابراجه
+<br>
+ جيش العدا يرجون قضا الحاجه
+<br>
+</div>
+
+
+
+
+</div>
 <h2>
 <marquee direction ="right">
 الحقوق محفوضة لدى الناشر لايحق لاي شخص اقتباس جزء منها  الا اذا ذكر المصدر للتواصل : <img src ="ff.png" width ="50px" height ="50px">770597882</img>
@@ -226,91 +365,167 @@
 <br>
 </h2>
 <div class="text8">
+<div class="texttt">
 <b>
-يابلبلاً بين البلابل بلبلا *** مهلاً روَيداً الفؤاد اشتعلا
+يابلبلاً بين البلابل بلبلا 
 <br>
-احرَقت جوف الجَافي عَنْ أَحبابه *** نغمك ربابي هز روابي ذَالخلَا
+احرَقت جوف الجَافي عَنْ أَحبابه 
  <br>
-اسكر حَواسِي ثم ذكرني أَباً *** حَبيباً حِسْيباً بَهْلَوَاناً أَفْضَلَا
+اسكر حَواسِي ثم ذكرني أَباً 
 <br>
-مُهَيمِناً عَلى الاوَلاد شفيقاً في أَهلِهِ *** خُلُقاً وَخَلقا للمَحَاسن شَمَلَا
+مُهَيمِناً عَلى الاوَلاد شفيقاً في أَهلِهِ
 <br>
-من بيت عَلمٍ نجل عَالَمٍ قَدْ مَضَا *** مَخْلُوط في عَقل رَجِيَحٍ أَكْمَلَا
+من بيت عَلمٍ نجل عَالَمٍ قَدْ مَضَا 
 <br>
-شَخْصَُ كريمَُ خُلقت من مَا صُلبه *** مَا من جميع اعضائه قَد نَزَلا
+شَخْصَُ كريمَُ خُلقت من مَا صُلبه 
 <br>
-خَلْقيِ نَزل من سَبْل قُرَّة عَيْنه *** سُلَالةَُ منْ مَا مَهينٍ حَصَلا
+خَلْقيِ نَزل من سَبْل قُرَّة عَيْنه 
 <br>
-وتكونت نطفةَُ مَفَاصل سَيدي *** سواني الخلاق مِنْهَا رَجُلا
+وتكونت نطفةَُ مَفَاصل سَيدي 
 <br>
-وَأَخْرَجَنيِ الله منْ مَجَارِي صُلبهِ *** وَروحي من روح الابا انْفَصَلا
+وَأَخْرَجَنيِ الله منْ مَجَارِي صُلبهِ 
 <br>
-ياروح روحي هل تمن يا ابتي *** في نظرة من وجهك المهلهلا
+ياروح روحي هل تمن يا ابتي 
 <br>
-أو ضمة من جسمك الصفي الندي *** تشفي به داء ولدك كالعسلا
+أو ضمة من جسمك الصفي الندي 
 <br>
-احببت ان انظر لوجهك نظرة *** اولمحة من ظل شخصك يرملا
+احببت ان انظر لوجهك نظرة 
 <br>
-ركضني زمان القرب منك برجله *** وادخلني البعد المبرح مدخلا
+ركضني زمان القرب منك برجله 
 <br>
-جعلت فداء نعلك ومضجع مضجعك *** وامعاء جوفك وما منها نزلا
+جعلت فداء نعلك ومضجع مضجعك 
 <br>
-ولحم اعضائك مع الجسم الذي *** اذا تصبب عرقا واغتسلا
+ولحم اعضائك مع الجسم الذي 
 <br>
-كانه البدر المدور في السماء *** وريحه يحي العظام النحلا
+كانه البدر المدور في السماء 
 <br>
-شوق لغرفة انت فيها ساكناً *** وثوب قطن فيه جسمك دخلا
+شوق لغرفة انت فيها ساكناً 
 <br>
-تاجك شمساً ووجهك قمراً *** وليلك صبحاً وسمرك عسلا
+تاجك شمساً ووجهك قمراً 
 <br>
-ليت شعري هل افوز بوصلكا *** واستنشق الريح في بلوغ الاملا
+ليت شعري هل افوز بوصلكا 
 <br>
-والثم ورود خدك وقبل كفكا *** عسى لبعد البين يرجع اسفلا
+والثم ورود خدك وقبل كفكا 
 <br>
-وان حكم الابعاد بين وبينكا *** أحوقل اه ولا حولا ولا
+وان حكم الابعاد بين وبينكا 
 <br>
-ولكني في روضة الهادي الشفيع *** ملتمس الشباك ودمعي هملا
+ولكني في روضة الهادي الشفيع 
 <br>
-معتنق قبر الحبيب المصطفى *** بجاهه عودى لاهلي عجلا
+معتنق قبر الحبيب المصطفى 
 <br>
-يابن العواتك من قريش المددا *** شوال مضى والركب عني رحلا
+يابن العواتك من قريش المددا 
 <br>
-قد زل بدراً اينما قال الكريم *** فيه لكم والركب عنكم رحلا 
+قد زل بدراً اينما قال الكريم 
 <br>
-الفسح ياسيد ولد ادم وداع *** ثم الاعانه والغوث ياسيد الملا
+الفسح ياسيد ولد ادم وداع 
 <br>
-الاستخاره في الاشاره عاجلا *** هات خيرتي في ليلتي لا تبخلا
+الاستخاره في الاشاره عاجلا 
 <br>
-يافرحتي طلبني خير الورى *** قال قربو فيمن الينا وصلا
+يافرحتي طلبني خير الورى 
 <br>
-وبليلتي دخلت في حجرته *** ثم قربت ياحبذاك المدخلا
+وبليلتي دخلت في حجرته 
 <br>
-الى شريف المضجع العالي وكان *** مضطجعا حتى نهض مستقبلا
+الى شريف المضجع العالي وكان 
 <br>
-إلى اللقاء وصاحبيه معه *** وزرتهم حتى بلغت الاملا
+إلى اللقاء وصاحبيه معه 
 <br>
-ثم افتسحت بعد طول زورة *** وقد عشاني نوره المشتعلا
+ثم افتسحت بعد طول زورة 
 <br>
-صلى عليك الله ياخير الورا *** ياخاتماً للرسل وخلقك اولا
+صلى عليك الله ياخير الورا 
 <br>
-والاال والاصحاب ماسبح له *** بلبل بدى على الروابي بلبلا
+والاال والاصحاب ماسبح له 
 <br>
 </b>
+</div>
+<div class ="textt">
+<b>
+ مهلاً روَيداً الفؤاد اشتعلا
+<br>
+ نغمك ربابي هز روابي ذَالخلَا
+ <br>
+ حَبيباً حِسْيباً بَهْلَوَاناً أَفْضَلَا
+<br>
+ خُلُقاً وَخَلقا للمَحَاسن شَمَلَا
+<br>
+ مَخْلُوط في عَقل رَجِيَحٍ أَكْمَلَا
+<br>
+ مَا من جميع اعضائه قَد نَزَلا
+<br>
+ سُلَالةَُ منْ مَا مَهينٍ حَصَلا
+<br>
+ سواني الخلاق مِنْهَا رَجُلا
+<br>
+ وَروحي من روح الابا انْفَصَلا
+<br>
+ في نظرة من وجهك المهلهلا
+<br>
+ تشفي به داء ولدك كالعسلا
+<br>
+ اولمحة من ظل شخصك يرملا
+<br>
+ وادخلني البعد المبرح مدخلا
+<br>
+ وامعاء جوفك وما منها نزلا
+<br>
+ اذا تصبب عرقا واغتسلا
+<br>
+ وريحه يحي العظام النحلا
+<br>
+ وثوب قطن فيه جسمك دخلا
+<br>
+ وليلك صبحاً وسمرك عسلا
+<br>
+ واستنشق الريح في بلوغ الاملا
+<br>
+ عسى لبعد البين يرجع اسفلا
+<br>
+ أحوقل اه ولا حولا ولا
+<br>
+ ملتمس الشباك ودمعي هملا
+<br>
+ بجاهه عودى لاهلي عجلا
+<br>
+ شوال مضى والركب عني رحلا
+<br>
+ فيه لكم والركب عنكم رحلا 
+<br>
+ ثم الاعانه والغوث ياسيد الملا
+<br>
+ هات خيرتي في ليلتي لا تبخلا
+<br>
+ قال قربو فيمن الينا وصلا
+<br>
+ ثم قربت ياحبذاك المدخلا
+<br>
+ مضطجعا حتى نهض مستقبلا
+<br>
+ وزرتهم حتى بلغت الاملا
+<br>
+ وقد عشاني نوره المشتعلا
+<br>
+ ياخاتماً للرسل وخلقك اولا
+<br>
+ بلبل بدى على الروابي بلبلا
+<br>
+</b>
+</div>
+
+
 </div>
 <h2>
 <marquee direction ="right"> 
 الحقوق محفوضة لدى الناشر لايحق لاي شخص اقتباس جزء منها  الا اذا ذكر المصدرللتواصل:<img src ="ff.png" width="50px " height ="50px ">770597882</img>
 </marquee>
 </h2>
-
 </div>
 
 
 
 
 <div id="ee"></div>
+
 <h3> المخطوطات </h3>
-<div class ="text6">
+<div class="text7">
 <b>
 لمشاهدة  المخطوطات
 <br>
@@ -320,21 +535,7 @@
 </b>
 </div>
 
-<h3>للتواصل معنا</h3>
-<div class="text12">
-<form name ="html form" method ="post" action ="server.php">
-<table id ="contact_form" dir="rtl">
-<tr><td><input type="text" name="first_name" placeholder="الاسم*" max length="50" size="30" required></td></tr>
-<tr><td><input type="text" name="last_name" placeholder="اللقب*" max length="50" size="30" required></td></tr>
-<tr><td><input type="email" name="email " placeholder="الايميل*" max length="80" size="30" required></td></tr>
-<tr><td><input type="text" name="telephone" placeholder="رقم الهاتف*" max length="30" size="30" required></td></tr>
-<tr><td><textarea name="comments" placeholder ="اكتب تعليقك هنا" max length="1000" cols="25" rows="6" required ></textarea></td></tr>
 
-
-<tr><td><input type="submit" value="ارسال"></td></tr>
-</table>
-</form>
-</div>
 
 <h3>زوار الموقع<h3>
 <div class="text10">
