--- a/index1.html
+++ b/index1.html
@@ -26,104 +26,199 @@
 <img src ="ee.jpg" width="800px" height ="900px" alt="picture of a forg"/>
 </div>
 
-<h3>ومن بعض المخطوطات التي عثر عليها</h3>
 <div class ="text4">
+<h1>	ومن بعض المخطوطات التي عثر عليها</h1>
 <h1>مخطوطة لكتاب الزبد في الفقه وسنذكر نبذه منها</h1>
 </div>
 
 <h2>بسم الله الرحمن الرحيم</h2>
 
 <div class ="text9">
-اول   مانستفتح    المقال *      بذكر     حمد    ربنا    تعالى
+<div class ="textt1">
+<b>
+اول   مانستفتح    المقال 
 <br>
-والحمد لله على ما انعما * حمداً به يجلو عن القلب العمى 
+والحمد لله على ما انعما  
 <br> 
-ثم الصلاة بعد والسلام * على نبي دينه الاسلام
+ثم الصلاة بعد والسلام 
 <br> 
-محمد خاتم رسل ربه * واله من بعده وصحبه
+محمد خاتم رسل ربه 
 <br> 
-ونسأل الله لنا الاعانة * فيما توخينا من الابانه
+ونسأل الله لنا الاعانة 
 <br> 
-عن مذهب الامام زيد الفرضي * اذا كان ذاك من اهم الغرض
+عن مذهب الامام زيد الفرضي 
 <br> 
-علماً بان العلم خير ما سعى * فيه واولى ماله العبد دعى
+علماً بان العلم خير ما سعى 
 <br> 
-وان هذا العلم مخصوص بما * قد شاع فيه عند كل العلماء
+وان هذا العلم مخصوص بما 
 <br> 
-بانه اول علم يفقد * بالارض حتى لايكاد يوجد
+بانه اول علم يفقد 
 <br> 
-وان زيداً خص لامحاله * بما حباه صاحب الرساله
+وان زيداً خص لامحاله 
 <br>
-من قوله في فضله منبهاً * افرضكم زيد وناهيك بها
+من قوله في فضله منبهاً 
 <br>
-فكان اولى بالتباع التابعي *لاسيما وقد نحاه الشافعي
+فكان اولى بالتباع التابعي 
 <br>
-فهاك فيه القول عن ايجازي * مبرا عن وصمة الالغاز
+فهاك فيه القول عن ايجازي 
+<br>
+</div>
+<div class ="texttt2">
+<b>
+      بذكر     حمد    ربنا    تعالى
+<br>
+ حمداً به يجلو عن القلب العمى 
+<br> 
+ على نبي دينه الاسلام
+<br> 
+ واله من بعده وصحبه
+<br> 
+ فيما توخينا من الابانه
+<br> 
+ اذا كان ذاك من اهم الغرض
+<br> 
+ فيه واولى ماله العبد دعى
+<br> 
+ قد شاع فيه عند كل العلماء
+<br> 
+ بالارض حتى لايكاد يوجد
+<br> 
+ بما حباه صاحب الرساله
+<br>
+ افرضكم زيد وناهيك بها
+<br>
+لاسيما وقد نحاه الشافعي
+<br>
+ مبرا عن وصمة الالغاز
 <br>
 </div>
 
+</div>
 <h2>باب اسباب الميراث</h2>
 
 <div class ="text9">
- اسباب ميراث الوراثه ثلاثه* كلاً يفيد ربه الوراثة
+<div class ="textt1">
+ اسباب ميراث الوراثه ثلاثه
 <br>
-وهي ولا ونكاح ونسب * مابعدهن للموارث سبب
+وهي ولا ونكاح ونسب 
 <br>
-وقد يقال بعدهن رابع * ميراث بيت المسلمين تابع
+وقد يقال بعدهن رابع 
 <br>
+</div>
+<div class ="texttt2">
+ كلاً يفيد ربه الوراثة
+<br>
+ مابعدهن للموارث سبب
+<br>
+ ميراث بيت المسلمين تابع
+<br>
+</div>
 </div>
 
 <h2>باب موانع الارث</h2>
-
 <div class="text9">
-ويمنع الشخص من الميراث * واحدة من علا ثلاثة  
+<div class="textt1">
+<b>
+ويمنع الشخص من الميراث
 <br>
-رقُّ وقتل واختلافُ دينِ * فافهم فليس الشك كاليقينِ
+رقُّ وقتل واختلافُ دينِ
+ 
 <br>
+</b>
+</div>
+
+<div class="texttt2">
+<b>
+  واحدة من علا ثلاثة 
+<br>
+فافهم فليس الشك كاليقينِ
+
+<br>
+</b>
+</div>
+
 </div>
 
 <h2>باب الانيه</h2>
 
 <div class="text9">
-يباح منها طاهر من خشب * وغيره لافضة وذهب 
+<div class ="textt1">
+يباح منها طاهر من خشب  
 <br>
-فيحرم استعماله كم ود * لامرأة وجاز من زبرجد
+فيحرم استعماله كم ود 
 <br>
-ويحرم الضبة من هذين * بكبر عرفاً مع التزيين 
+ويحرم الضبة من هذين  
 <br>
-قلت كذاك صحح الجمهور * ان الضباب مطلقاً محضور 
+قلت كذاك صحح الجمهور 
 <br>
-ان فقدت حلت وفردا تكره * والحاجة مالم تجاوز كسره
+ان فقدت حلت وفردا تكره 
 <br>
-ويستحب في الاواني التغطية * ولو بعود حط فوق الانية
+ويستحب في الاواني التغطية 
 <br>
-ويتحر لإشتباه طاهر * بنجس ولولا عمي قادر
+ويتحر لإشتباه طاهر 
 <br>
-كا الكم اولبول وميته وما * وردٍ وخمرٍ دراً من حرما
+كا الكم اولبول وميته وما 
 <br>
 </div>
-
+<div class ="texttt2">
+ وغيره لافضة وذهب 
+<br>
+ لامرأة وجاز من زبرجد
+<br>
+ بكبر عرفاً مع التزيين 
+<br>
+ ان الضباب مطلقاً محضور 
+<br>
+ والحاجة مالم تجاوز كسره
+<br>
+ ولو بعود حط فوق الانية
+<br>
+ بنجس ولولا عمي قادر
+<br>
+ وردٍ وخمرٍ دراً من حرما
+<br>
+</div>
+</div>
 <h2>باب السواك</h2>
 
 <div class="text9">
-يسن لابعد زوال الصايم * واكد ولا لانتباه النايم
+<div class ="textt1">
+يسن لابعد زوال الصايم 
 <br>
-ولتغير فم وللصلاة * ويسن باليمنى الاراك أولاه
+ولتغير فم وللصلاة 
 <br>
-ويستحب الاكتحال وتراً * وغباً ادهن وقلم ظفراً
+ويستحب الاكتحال وتراً 
 <br>
-وانتف الابط ويقص الشارب * والعانة احلق والختان واجب
+وانتف الابط ويقص الشارب 
 <br>
-لبالغ ساتر كمرة قطع * والا سم من انثى ويكره القزع 
+لبالغ ساتر كمرة قطع 
 <br>
-تنزهاً والاخذ من جوانب * عنفقة ولحية وشارب
+تنزهاً والاخذ من جوانب 
 <br>
-وحلق شعر امرأة ورد * طيب وريحان على من يهدي
+وحلق شعر امرأة ورد 
 <br>
-وحرموا خضاب شعر سواد * لرجلٍ وامرأةٍ لا للجهاد
+وحرموا خضاب شعر سواد 
 <br>
 </div>
-
+<div class ="texttt2">
+ واكد ولا لانتباه النايم
+<br>
+ ويسن باليمنى الاراك أولاه
+<br>
+ وغباً ادهن وقلم ظفراً
+<br>
+ والعانة احلق والختان واجب
+<br>
+ والا سم من انثى ويكره القزع 
+<br>
+ عنفقة ولحية وشارب
+<br>
+ طيب وريحان على من يهدي
+<br>
+ لرجلٍ وامرأةٍ لا للجهاد
+<br>
+</div>
+</div>
 <h2><marquee direction ="right">وسيتم ان شاء الله تعالى كتابة الباقي قام بجمع المخطوطات وكتابتها 
 MNYR ALSAMAWY للتواصل :<img src ="ff.png" width ="50px" height ="50px"></img>770597882</marquee>
 </h2>
